examples/test/testpolicy12419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12419
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key22: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value3
          key12: value14
          key15: value6
      podSelector:
        matchLabels:
          key45: value18
          key19: value34
